[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"
[project]
name = "instruments-for-thought"
version = "0.0.1"
authors = [
    {name="Machina Ratiocinatrix", email="machina.ratio@gmail.com"},
    {name="Alexander Fedotov", email="alex.fedotov@aol.com"}
]
description = "Instruments for Thought"
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]

keywords = ["instruments-for-thought"]

dependencies = [
    "pyyaml == 6.0.3"
]

[project.scripts]
instruments-for-thought = "package_name.cli:run"

[project.urls]
"Homepage" = "https://github.com/instruments-for-thought/instruments-for-thought"